implementaçaõ de doc swagger nos endpoints
